tests/tooling/fixtures/native/recovery/negative/negative_block_comment_lexer_stray_terminator.objc3
// Expected diagnostic code(s): O3L004.
module NegativeBlockCommentLexerStrayTerminator;

fn main() -> i32 {
  */
  return 0;
}
